# Aperture

./: .dockerignore  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile.agent  Dockerfile.aggregator  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  flamegraph.svg.syscall.txt  test_minimal_load.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml  README.md
agent-ebpf/: Cargo.toml  build.rs
agent-ebpf/.cargo/: config.toml
agent-ebpf/src/: common.rs  cpu_profiler.rs  lock_profiler.rs  minimal_test.rs  syscall_tracer.rs  vmlinux.rs
agent/examples/: test_minimal.rs
agent/src/: config.rs  lib.rs  main.rs  retry.rs
agent/src/collector/: cpu.rs  lock.rs  mod.rs  symbols.rs  syscall.rs
agent/src/ebpf/: cpu_profiler.rs  loader.rs  lock_profiler.rs  mod.rs  syscall_tracer.rs
agent/src/output/: flamegraph.rs  histogram.rs  json.rs  mod.rs
agent/src/wasm/: host.rs  mod.rs  runtime.rs
agent/tests/: pipeline_test.rs  profile_pipeline.rs
aggregator/: Cargo.toml  README.md  build.rs
aggregator/proto/: aperture.proto
aggregator/src/: aggregate.rs  alerts.rs  audit.rs  buffer.rs  config.rs  export.rs  lib.rs  main.rs  metrics.rs
aggregator/src/server/: api.rs  auth.rs  grpc.rs  http.rs  mod.rs
aggregator/src/storage/: clickhouse.rs  mod.rs  scylla.rs
aggregator/tests/: e2e_clickhouse.rs
cli/: Cargo.toml
cli/src/: main.rs  output.rs
cli/src/commands/: aggregate.rs  diff.rs  mod.rs  profile.rs  query.rs
deploy/k8s/: agent-daemonset.yml  aggregator.yml  namespace.yml
docs/: API-REFERENCE.md  ARCHITECTURE.md  RUN-EXAMPLES.md  SYMBOL-RESOLUTION.md  roadmap.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: api-reference.md  architecture.md  getting-started.md  intro.md  roadmap.md
docs-site/docs/guides/: alerting.md  kubernetes.md  run-examples.md  symbol-resolution.md  wasm-filters.md
docs-site/src/components/HomepageFeatures/: index.tsx
docs-site/src/css/: custom.css
docs-site/src/pages/: index.tsx
examples/python/: README.md  workload.py
gpu-profiler/: Cargo.toml  README.md
gpu-profiler/src/: lib.rs  metrics.rs
gpu-profiler/src/cupti/: bindings.rs  collector.rs  mod.rs
scripts/: install.sh  setup-debug-symbols.sh  sync-orb.sh
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/protocol/: mod.rs  wire.rs
shared/src/types/: diff.rs  events.rs  mod.rs  profile.rs
shared/src/utils/: mod.rs  syscalls.rs  time.rs
shared/src/wasm/: mod.rs
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts  queries.ts  types.ts
ui/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  TopBar.tsx
ui/src/components/profiler/: ComparisonView.tsx  CpuTimelineChart.tsx  FlamegraphViewer.tsx  LatencyHistogram.tsx  ProfileInsights.tsx  TopFunctionsTable.tsx
ui/src/contexts/: DashboardContext.tsx  Phase8Context.tsx
ui/src/lib/: format.ts
ui/src/pages/: AlertsPage.tsx  ComparisonPage.tsx  Dashboard.tsx  FlamegraphPage.tsx  SettingsPage.tsx  SyscallsPage.tsx  TimelinePage.tsx  TopFunctionsPage.tsx
wasm/: Cargo.toml  README.md
wasm-runtime/: Cargo.toml
wasm-runtime/examples/: filter_example.rs
wasm-runtime/src/: filter_api.rs  lib.rs  runtime.rs
wasm/examples/: process_filter.rs  sampling_filter.rs  stack_filter.rs
wasm/src/: lib.rs
