[workspace]
members = [
    "agent",
    "agent-ebpf",
    "aggregator",
    "shared",
    "cli",
    "wasm-runtime",
    "gpu-profiler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Aperture contributors"]
repository = "https://github.com/yourusername/aperture"
homepage = "https://github.com/yourusername/aperture"
documentation = "https://docs.rs/aperture"
readme = "README.md"
keywords = ["ebpf", "profiling", "performance", "observability", "gpu"]
categories = ["development-tools::profiling", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# eBPF
aya = { version = "0.13.1", features = ["async_tokio"] }
aya-log = "0.2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# WASM
wasmtime = "16.0"

# Storage
clickhouse = "0.11"

# Metrics
prometheus = "0.13"

# Config
config = "0.13"
toml = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
debug = true
panic = "abort"

[profile.bench]
inherits = "release"
