[package]
name = "aperture-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Profiling agent for Aperture"

[[bin]]
name = "aperture-agent"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
aya = { workspace = true, features = ["async_tokio"] }
aya-log.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "fs"] }
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmtime.workspace = true
bincode.workspace = true

# Internal dependencies
aperture-shared = { path = "../shared", features = ["wire-protocol"] }
aperture-aggregator = { path = "../aggregator" }
tonic = { version = "0.11", features = ["gzip"] }

# Symbol resolution
blazesym = "0.2"
symbolic = "12.0"
symbolic-demangle = "12.0"

# System interaction
libc = "0.2"
hostname = "0.4"
nix = { version = "0.27", features = ["process", "signal", "fs"] }

# Flamegraph generation
inferno = "0.11"

# Error reporting
color-eyre = "0.6"

# Byte manipulation
bytes = "1.5"

# CPU detection
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
# If enabled the compiled eBPF object files from `agent-ebpf` are
# embedded into the agent binary at build time.  Building with this
# feature requires the BPF targets to have already been compiled in
# `../target/bpfel-unknown-none/release` (see CONTRIBUTING.md).
# The feature is intentionally off by default so that developers and
# CI jobs can build the agent without first constructing the eBPF
# artifacts.  When disabled the agent will only attempt to load the
# programs from disk or from the path configured via
# `APERTURE_EBPF_*` env vars.
embed-bpf = []
