[package]
name = "aperture-aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aggregator service for Aperture (Phase 5+)"

[[bin]]
name = "aperture-aggregator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true

# Internal dependencies
aperture-shared = { path = "../shared", features = ["wire-protocol"] }

# gRPC
tonic = "0.11"
prost = "0.12"
async-trait = "0.1"

# Serialization
base64 = "0.21"
bincode = { workspace = true }

# Storage (Phase 6+)
clickhouse = { workspace = true, optional = true }

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "2"

[features]
default = []
clickhouse-storage = ["dep:clickhouse"]

[dev-dependencies]
aperture-shared = { path = "../shared", features = ["wire-protocol"] }
tokio = { workspace = true }
tonic = "0.11"
base64 = "0.21"
