[package]
name = "aperture-aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aggregator service for Aperture"

[[bin]]
name = "aperture-aggregator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true

# Internal dependencies
aperture-shared = { path = "../shared", features = ["wire-protocol"] }

# gRPC (gzip for network efficiency)
tonic = { version = "0.11", features = ["gzip"] }
prost = "0.12"
async-trait = "0.1"

# Serialization
base64 = "0.21"
bincode = { workspace = true }

# Storage
clickhouse = { workspace = true, optional = true }

# Observability
prometheus = { workspace = true }
once_cell = "1.19"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tonic-health = "0.11"
tokio-util.workspace = true

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "2"

[features]
default = []
clickhouse-storage = ["dep:clickhouse"]

[dev-dependencies]
aperture-shared = { path = "../shared", features = ["wire-protocol"] }
tokio = { workspace = true }
tonic = "0.11"
base64 = "0.21"
