[package]
name = "aperture-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for Aperture"

[[bin]]
name = "aperture"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Internal dependencies
aperture-shared = { path = "../shared" }
aperture-agent = { path = "../agent" }
aperture-aggregator = { path = "../aggregator" }
tonic = "0.11"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI utilities
colored = "2.1"
indicatif = "0.17"
