[package]
name = "aperture-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GPU profiling for Aperture (Phase 4+)"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Internal dependencies
aperture-shared = { path = "../shared" }

# FFI
libc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
default = []
cuda = []
rocm = []
