[package]
name = "aperture-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types and utilities for Aperture"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Time handling
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Cap'n Proto for wire protocol
capnp = { version = "0.18", optional = true }

[features]
default = []
wire-protocol = ["capnp"]
