[package]
name = "aperture-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SDK for writing Aperture WASM filters"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aperture-shared = { path = "../shared" }
serde = { workspace = true }
bincode = { workspace = true }

[[example]]
name = "process_filter"
crate-type = ["cdylib"]

[[example]]
name = "stack_filter"
crate-type = ["cdylib"]

[[example]]
name = "sampling_filter"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
strip = true
